# Satellite

./: AmadeusSatellite.sln  README.md
Dyn/: CMakeLists.txt  Dyn.vcxproj  Dyn.vcxproj.filters
Dyn/Config/: Init.ini
Dyn/include/Astro/: Attitude.h  AttitudeControl.h  Environment.h  Orbit.h  SunCal.h
Dyn/include/Communication/: BaseCommuPara.h  Thread.h  UDP.h  USART.h
Dyn/include/Componet/: Componet.h  Flywheel.h  GNSS.h  Gyro.h  MagSensor.h  StarSensor.h  SunSensor.h
Dyn/include/General/: AllHead.h  CConfig.h  InfluxDB.h  IniConfig.h  SatTime.h  SimTime.h
Dyn/include/Satellite/: Flywheel.h  Gyro.h  MagSensor.h  Satellite.h  StarSensor.h  SunSensor.h
Dyn/include/SatelliteMath/: BaseMath.h  Dcm.h  EulerAgl.h  Quaternions.h  SatelliteEigen.h
Dyn/include/Utils/: utils.h
Dyn/src/: main.cpp
Dyn/src/Astro/: Attitude.cpp  AttitudeControl.cpp  Environment.cpp  Orbit.cpp  SunCal.cpp
Dyn/src/Communication/: Thread.cpp  UDP.cpp  USART.cpp
Dyn/src/Componet/: Componet.cpp  Flywheel.cpp  GNSS.cpp  Gyro.cpp  MagSensor.cpp  StarSensor.cpp  SunSensor.cpp
Dyn/src/Config/: Componet.ini  Database.ini  wmm_2020_data.txt  数据库对照表.xlsx
Dyn/src/General/: CConfig.cpp  InfluxDB.cpp  IniConfig.cpp  SatTime.cpp  SimTime.cpp
Dyn/src/Satellite/: Flywheel.cpp  Gyro.cpp  MagSensor.cpp  Satellite.cpp  StarSensor.cpp  SunSensor.cpp
Dyn/src/SatelliteMath/: BaseMath.cpp  Dcm.cpp  EulerAgl.cpp  Quaternions.cpp
Dyn/src/Utils/: utils.cpp
